# pyroll-lippmann-mahrenholz-force-torque

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: lippmann_mahrenholz_force_torque.py  lippmann_mahrenholz_power_and_labour.py
pyroll/lippmann_mahrenholz_power_and_labour/: __init__.py  exporter_hookimpls.py  reporter_hookimpls.py  roll_pass_hookimpls.py  roll_pass_hookspecs.py
tests/: test_solve.py  test_solve3.py  test_solve_with_tensions.py
