[project]
name = "pyroll-lippmann-mahrenholz-force-torque"
description = "Plugin for PyRolL providing the power and labour calculation after O. Lippmann and H. Mahrenholz"
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]

license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9"
dependencies = [
    "pyroll-core"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll-project.github.io/"
Repository = "https://github.com/pyroll-project/pyroll-lippmann-mahrenholz-force-torque"
Documentation = "https://github.com/pyroll-project/pyroll-lippmann-mahrenholz-force-torque/blob/main/docs/docs.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
